# Chip8-Emulator

./: CMakeLists.txt  INIReader.h  LICENSE  README.md  chip8.cpp  chip8.h  chip8_opcodes.cpp  elapsedtimer.cpp  elapsedtimer.h  main.cpp  settings.ini
